fix: support SABR URL decoding before Android 13